# Programming-lessons

./: README.md  define_example.c  evklid_simple.cpp  fuction_test.c
gas_system/: CMakeLists.txt
gas_system/src/: ParticleSystem.h  main.cpp  vector2f.h
shell/: output.txt  pipe  pipe.c  sqr
shell/build-src-Desktop-Debug/: Makefile  out  src
shell/src/: main.cpp  shell.h  src.pro
